Attempt to fix box shadow overflow

--- a/css/main.css
+++ b/css/main.css
@@ -174,12 +174,12 @@ h1 {
   width: 275px;
   margin-top: 1em;
   border-radius: 10px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
     0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
     0 100px 80px rgba(0, 0, 0, 0.07);
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
   overflow: visible;
 }
 
@@ -192,6 +192,7 @@ figure {
 .work-container figure {
   width: 275px;
   margin: auto;
+  overflow: visible;
 }
 
 .left-work-btn {
